--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">WeatherAppUI</string>
+    <string name="temperature_placeholder">%d°</string>
 </resources>
